Class diagrams for dddoc2.
git-svn-id: http://svn.seqan.de/seqan/trunk@10380 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/util/py_lib/seqan/dddoc/tpl/files/_macros.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/files/_macros.html
@@ -1,3 +1,15 @@
+<!--(macro hierarchy_section)-->
+  <!--(if path[0] in ['Class', 'Spec', 'Concept'])-->
+<div id="class-diagram" class="hierarchy_section">
+  <script type="application/javascript"> 
+  var data = $!html.classHierarchyJS(tree.find(path))!$;
+  </script> 
+  <canvas id="canvas" width="10" height="10"></canvas> 
+  <div id="class-links"></div>
+</div> 
+  <!--(end)-->
+<!--(end)-->
+
 <!--(macro table_of_contents)-->
 <div class="contents">
   <div class="contents_heading">Contents</div>
