--- a/seqan/util/py_lib/seqan/dddoc/tpl/files/page.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/files/page.html
@@ -8,15 +8,21 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen" />
+    <!--[if IE]><script src="../js/excanvas.js" type="text/javascript" charset="utf-8"></script><![endif]-->
     <script src="../js/jquery-1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/jquery-effect.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../js/hierarchy-tree.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/main.js" type="text/javascript" charset="utf-8"></script>
- <style type="text/css">
+    <link rel="stylesheet" type="text/css" href="../css/hierarchy-tree.css">
+<style type="text/css">
  body {
  font-size: 100%;
  width:80%;
  margin: 0em 0em 0em 1em;
   }
+.hierarchy_section {
+text-align:center;
+}
 .section table {
     margin: 0em 1em;
     width: 100%;
@@ -53,7 +59,7 @@
   }
   </style>
 </head>
-<body class="page">
+<body class="page" onload="draw()">
 <div class="banner">
   <!--(if tree.find('globals.categories.' + cat))-->
   <span class="cat_type">@!tree.find('globals.categories.' + cat).text()!@</span>
@@ -65,6 +71,8 @@
 
 $!text_section(path=[cat, subcat, 'summary'], hide_title=True)!$
 $!text_section(path=[cat, subcat, 'description'], hide_title=True)!$
+$!signature_section(key='signature')!$
+$!hierarchy_section(path=[cat, subcat])!$
 
 <!--(if tree.find(path=[cat, subcat, 'conceptfunc']) or tree.find(path=[cat, subcat, 'conceptmetafunc']))-->
 <div style="concept_definition">
@@ -87,7 +95,6 @@ $!text_section(path=[cat, subcat, 'description'], hide_title=True)!$
   <!--(end)-->
 <!--(end)-->
 
-$!signature_section(key='signature')!$
 $!list_section(key='include')!$
 $!param_section(key='param')!$
 $!return_section(key='returns')!$
