--- a/seqan/util/py_lib/seqan/dddoc/tpl/files/_macros.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/files/_macros.html
@@ -225,11 +225,20 @@
     <table>
       <tbody>
         <!--(for i, path in enumerate(sorted(tree.find([cat, subcat, key]).texts)))-->
+          <!--(if '|' in path)-->
+          $!setvar('from_label', "path.split('|', 1)[1]")!$
+          $!setvar('path', "path.split('|', 1)[0]")!$
+          <!--(end)-->
           <!--(if tree.find(path))-->
           <tr class="@!{0: 'even', 1: 'odd'}[i % 2]!@">
             <td class="signature">$!html.pageLink(txt=path, node=tree.find(path))!$</td>
             <!--(if tree.find(path + '.summary'))-->
-            <td class="summary">$!text_field(path=[path] + ['summary'])!$</td>
+            <td class="summary">
+              $!text_field(path=[path] + ['summary'])!$
+              <!--(if exists('from_label'))-->
+              <strong>Inherited from:</strong> $!html.pageLink(txt=from_label, node=tree.find(path))!$
+              <!--(end)-->
+            </td>
             #!<td class="summary">$!html.translateMarkup(default("' '.join(tree.find(path + '.summary').texts)", 'none'))!$</td>!#
             <!--(end)-->
           </tr>
