Changing some styles, templates.
git-svn-id: http://svn.seqan.de/seqan/trunk@10420 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/util/py_lib/seqan/dddoc/tpl/files/page.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/files/page.html
@@ -35,7 +35,7 @@ $!hierarchy_section(path=[cat, subcat])!$
   <h2>Concept Definition</h2>
   $!link_sigs_section(key='conceptfunc')!$
   $!link_sigs_section(key='conceptmetafunc')!$
-<div>
+</div>
 <!--(end)-->
 
 <!--(if tree.find([cat, subcat, 'glossary']))-->
