Fixing docu issue in firefox, times in UTC.
git-svn-id: http://svn.seqan.de/seqan/trunk@10421 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/util/py_lib/seqan/dddoc/tpl/files/index_page.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/files/index_page.html
@@ -77,9 +77,7 @@ $!text_section(path=['Indexpage', cat, 'example'])!$
 #!<pre>@!by_subcat!@</pre>
 </div>
 
-<div id="footer">
-  built: @!now.strftime("%m/%d/%y %H:%M:%S")!@
-</div>
+<div id="footer">Built @!now.strftime("%y/%m/%d %H:%M:%S")!@ UTC</div>
 </body>
 </html>
 
