--- a/seqan/util/py_lib/seqan/dddoc/tpl/files/page.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/files/page.html
@@ -93,6 +93,6 @@ $!link_section(key='see')!$
 #!<pre>@!tree.find([cat, subcat])!@</pre>#! remove comment for debugging
 </div>
 
-<div id="footer">built: @!now.strftime("%m/%d/%y %H:%M:%S")!@</div>
+<div id="footer">Built @!now.strftime("%y/%m/%d %H:%M:%S")!@ UTC</div>
 </body>
 </html>
