--- a/seqan/util/py_lib/seqan/dddoc/tpl/panel/index.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/panel/index.html
@@ -10,6 +10,7 @@
 	<script src="search_index.js" type="text/javascript" charset="utf-8"></script>
 	<script src="tree.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../js/jquery-1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../js/seqan-dddoc.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../js/searchdoc.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" charset="utf-8">
 		//<![CDATA[
@@ -42,13 +43,26 @@
            var panel = new Searchdoc.Panel($('#panel'), search_data, tree, top.frames[1]);
            $('#search').focus();
 
-           var s = window.parent.location.search.match(/\?q=([^&]+)/);
+           // Handle searches via top frame entry URL.
+           var s = window.parent.location.hash.match(/#q=([^&]+)/);
            if (s) {
                s = decodeURIComponent(s[1]).replace(/\+/g, ' ');
                if (s.length > 0)
                {
                    $('#search').val(s);
                    panel.search(s, true);
+               }
+           }
+
+           // Handle direct accesses to elements.
+           s = window.parent.location.hash.match(/#i=([^&]+)/);
+           if (s) {
+               s = decodeURIComponent(s[1]).replace(/\+/g, ' ');
+               if (s.length > 0)
+               {
+                   var arr = s.split('.');
+                   var filename = seqan.doc.getPagePath(arr[0], arr[1], 'files');
+                   panel.open(filename);
                }
            }
 	   })
