Polishing dddoc output a bit, allowing queries and direct links, permalink field.
git-svn-id: http://svn.seqan.de/seqan/trunk@10445 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/util/py_lib/seqan/dddoc/tpl/files/index_page.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/files/index_page.html
@@ -14,10 +14,14 @@
  <style type="text/css">
 </style>
 </head>
-<body class="index-page">
+<body class="index-page" onload="setPermalink('@!'Indexpage.' + cat!@');">
 #!<pre>@!tree.find(['Indexpage', cat])!@</pre>!#
 <div class="banner">
   <h1 class="first">@!title!@</h1>
+  <div class="permalink">
+    <a href="#" onclick="togglePermalink(); return false;">permalink</a>
+    <div id="permalink-div"><input type="text" id="permalink-field" value="..." /></div>
+  </div>
 </div>
 
 <div class="content boxed">
