--- a/seqan/util/py_lib/seqan/dddoc/tpl/index.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 	<title>${site_title}</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <frameset cols="300,*" frameborder="1" border="1" bordercolor="#666666" framespacing="1">
     <frame src="panel/index.html" title="Search" name="panel" />
