Prettier example formatting with highlighting.
git-svn-id: http://svn.seqan.de/seqan/trunk@10640 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/util/py_lib/seqan/dddoc/tpl/files/_macros.html
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/files/_macros.html
@@ -69,7 +69,7 @@
         <p>$!html.translateMarkup(text[len('type=contents:'):], node=tree.find(path))!$</p>
         $!table_of_contents(path=path)!$
         <!--(elif text.startswith('type=code:'))-->
-        <pre>@!text[len('type=code:'):]!@</pre>
+        $!html._formatCode(text[len('type=code:'):])!$
         <!--(else)-->
         <pre>@!path!@ @!tree.find(path)!@</pre>
         <pre>@!text!@</pre>
